force-app/main/default/objects/df_160_virksomheder__c/df_160_virksomheder__c.object-meta.xml
<CustomObject>
    <label>Virksomheder</label>
    <nameField>
        <label>Virksomheder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virksomheders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>