force-app/main/default/objects/df_160_virksomheder__c/fields/virksomhed_adresse__c.field-meta.xml
<CustomField>
    <fullName>virksomhed_adresse__c</fullName>
    <label>Adressev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>