force-app/main/default/objects/df_160_virksomheder__c/fields/virksomhed_by__c.field-meta.xml
<CustomField>
    <fullName>virksomhed_by__c</fullName>
    <label>Byv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>