force-app/main/default/objects/df_160_virksomheder__c/fields/virksomhed_navn__c.field-meta.xml
<CustomField>
    <fullName>virksomhed_navn__c</fullName>
    <label>Virksomhedens navn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>