force-app/main/default/objects/df_160_virksomheder__c/fields/virksomhed_p2__c.field-meta.xml
<CustomField>
    <fullName>virksomhed_p2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person 2 Virksomhed</label>
    <type>Checkbox</type>
</CustomField>