force-app/main/default/objects/df_160_virksomheder__c/fields/virksomhed_postnummer__c.field-meta.xml
<CustomField>
    <fullName>virksomhed_postnummer__c</fullName>
    <label>Postnummerv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>